test/interpreter/errors/include_truncated2.cc

# inclu
[[err]]---------------------------------------------
interpreter/errors/include_truncated2.cc[2:8]: Macro '#inclu' desconocida.
